<resources>
    <string name="app_name">Notepad</string>
    <string name="login">Log in</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="wrong_login">Wrong username or password</string>
    <string name="welcome_text">Remember everything important. A central place for your notes, ideas, lists and reminders.</string>
    <string name="welcome">Welcome!</string>
    <string name="skip">skip</string>
    <string name="add">add</string>
    <string name="next">Next</string>
    <string name="add_notes">add notes</string>
    <string name="number_of_notes">number of notes</string>
    <string name="title">title</string>
    <string name="save">save</string>
    <string name="description">description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="your_notes">Your Notes</string>
    <string name="search">Search</string>
    <string name="date">Date</string>
    <string name="customize_your_note">Customize Your Note</string>
    <string name="download_image">Download image?</string>
    <string name="url_area">Url Area</string>
    <string name="change_image_url">Change image URL</string>
    <string name="add_to_favorites">Add to favorites?</string>
    <string name="cancel">Cancel</string>
    <string name="show_image">Show image</string>
</resources>